# DiffeRT2d

./: .bumpversion.cfg  .gitignore  .mdlc.json  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CNAME  README.md  analyse_results.py  benchmark.py  convergence_analysis.py  pyproject.toml
.github/workflows/: coverage.yml  draft-joss-paper.yml  pages.yml  publish.yml  test.yml
differt2d/: __init__.py  __version__.py  _typing.py  abc.py  config.py  defaults.py  geometry.py  logic.py  optimize.py  scene.py  utils.py
differt2d/models/: __init__.py  cost20120.py
docs/: Makefile
docs/source/: Deep Learning.ipynb  Deep_Learning.ipynb  GFlowNet.ipynb  NotGFlowNet.ipynb  Untitled.ipynb  conf.py  index.md  jax_and_jaxtyping.md  quickstart.md  references.bib
docs/source/_ext/: plot_directive.py
docs/source/_ext/parsers/: custom.py
docs/source/_static/: custom.css
docs/source/apidocs/: index.rst
docs/source/contributing/: index.md  internals.md  workflow.md
docs/source/examples/: index.rst
docs/source/notebooks/: cost20120_helsinki_improved_model.ipynb  cost20120_helsinki_model.ipynb  cost20120_model.ipynb
docs/source/reference/: differt2d.abc.rst  differt2d.defaults.rst  differt2d.geometry.rst  differt2d.logic.rst  differt2d.models.cost20120.rst  differt2d.models.rst  differt2d.optimize.rst  differt2d.scene.rst  differt2d.utils.rst  index.rst
docs/source/research/: index.md
examples/: README.md  basic_scene.py  basic_scene_los.py  basic_scene_optimize.py  basic_scene_power_received.py  example.geojson  interactive.py  mpt_optimizer.py  plot_optimize_steps.py  plot_power_map.py  plot_power_optimize.py  plot_power_profiles.py  plot_ris_power_map.py  plot_vertex_diffraction_power_map.py  power_map.py  power_optimize.py  power_profiles.py  qt_interactive.py  square_scene_power_received.py
paper/: plot_optimize_steps.py  plot_power_map.py  plot_zero_gradient.py  utils.py
papers/eucap2024/: README.md  plot_optimize_steps.py  plot_power_map.py  plot_zero_gradient.py  utils.py
papers/joss/: README.md  paper.bib  paper.md  plot_optimize_steps.py  plot_ris_power_map.py  slides.ipynb  slides.md
static/: README.md
tests/: conftest.py  example.geojson  test_abc.py  test_geometry.py  test_logic.py  test_optimize.py  test_scene.py  test_utils.py  test_version.py
tests/benchmarks/: conftest.py  test_geometry.py  test_scene.py
tests/models/: test_cost20120.py
