[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
target-version = ["py39"]

[tool.docformatter]
black = true
pre-summary-newline = true

[tool.isort]
profile = "black"
py_version = 39

[tool.poetry]
authors = ["Jérome Eertmans <jeertmans@icloud.com>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering"
]
description = "2D Toolbox for Differentiable Ray Tracing"
documentation = "https://eertmans.be/DiffeRT2d"
exclude = ["docs/", "static/"]
homepage = "https://github.com/jeertmans/DiffeRT2d"
keywords = ["ray tracing", "differentiable"]
license = "MIT"
name = "DiffeRT2d"
packages = [
  {include = "differt2d"}
]
readme = "README.md"
repository = "https://github.com/jeertmans/DiffeRT2d"
version = "0.2.0"

[tool.poetry.dependencies]
chex = ">=0.1.7"
differt-core = "0.0.5"
jax = "^0.4.7"
matplotlib = ">=3.7.1"
optax = ">=0.1.5"
python = "<3.13,>=3.9"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pre-commit = "^3.0.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
furo = "^2023.5.20"
myst-parser = ">=2"
pyside6 = {version = "^6.5.2", python = "<3.12"}
qtgallery = "^0.0.2"
qtpy = "^2.4.0"
sphinx = "^7.2.6"
sphinx-autodoc-typehints = "^1.23.2"
sphinx-click = "^4.4.0"
sphinx-copybutton = "^0.5.1"
sphinx-gallery = "^0.14.0"
sphinxext-opengraph = "^0.7.5"

[tool.poetry.group.github-action]
optional = true

[tool.poetry.group.github-action.dependencies]
jax = {extras = ["cpu"], version = "^0.4.7"}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
byexample = "^10.5.6"
pyperf = "^2.6.1"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-env = "^0.8.1"
pytest-xdist = "^3.3.1"
rtoml = "^0.9.0"

[tool.pytest.ini_options]
env = [
  "JAX_DEBUG_NANS=True",
  "JAX_PLATFORM_NAME=cpu"
]
filterwarnings = [
  "error"
]

[tool.ruff]
ignore = [
  "E501"
]
select = ["F", "E4", "E7", "E9", "F"]
target-version = "py38"
