[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-fancy-pypi-readme"]

[project]
authors = [{name = "Jérome Eertmans", email = "jeertmans@icloud.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "beartype>=0.17.2",
  "differt-core==0.0.17",
  "equinox>=0.11.2",
  "jax>=0.4.7",
  "jaxtyping>=0.2.24",
  "matplotlib>=3.7.1",
  "numpy>=1.24",
  "optax>=0.1.5",
  "typing-extensions>=4.9.0;python_version<'3.11'",
]
description = "2D Toolbox for Differentiable Ray Tracing"
dynamic = ["readme", "version"]
exclude = ["docs/", "static/"]
keywords = ["ray tracing", "differentiable"]
license = "MIT"
name = "DiffeRT2d"
requires-python = ">=3.9"

[project.urls]
Changelog = "https://github.com/jeertmans/DiffeRT2d/releases"
Documentation = "https://eertmans.be/DiffeRT2d"
Founding = "https://github.com/sponsors/jeertmans"
Homepage = "https://github.com/jeertmans/DiffeRT2d"
Repository = "https://github.com/jeertmans/DiffeRT2d"

[tool.bumpversion]
allow_dirty = false
commit = true
commit_args = ""
current_version = "0.3.3"
ignore_missing_version = false
message = "chore(deps): bump version from {current_version} to {new_version}"
parse = '(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(-rc(?P<release>\d+))?'
regex = false
replace = "{new_version}"
search = "{current_version}"
serialize = ["{major}.{minor}.{patch}-rc{release}", "{major}.{minor}.{patch}"]
sign_tags = false
tag = false
tag_message = "Bump version: {current_version} → {new_version}"
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "differt2d/__version__.py"
replace = '__version__ = "{new_version}"'
search = '__version__ = "{current_version}"'

[[tool.bumpversion.files]]
filename = "CITATION.cff"
replace = "version: v{new_version}"
search = "version: v{current_version}"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
replace = "v{new_version}"
search = "Unreleased"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
replace = "v{new_version}"
search = "unreleased"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
replace = "v{current_version}...v{new_version}"
search = "v{current_version}...HEAD"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
replace = '''<!-- start changelog -->

(unreleased)=
## [Unreleased](https://github.com/jeertmans/DiffeRT2d/compare/v{new_version}...HEAD)'''
search = "<!-- start changelog -->"

[tool.codespell]
builtin = "clear,rare,informal,usage,names,en-GB_to_en-US"
check-hidden = true
ignore-words-list = "master,fpt"
skip = "*.lock,*.ipynb,*.bib"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
]
precision = 2

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '> \[!([A-Z]+)\]'
replacement = '> **\1:**'

[tool.hatch.version]
path = "differt2d/__version__.py"

[tool.pyright]
include = ["differt2d", "examples", "tests"]
venv = ".venv"
venvPath = "."

[tool.pytest.ini_options]
addopts = [
  "-n=auto",
  "--cov-report=xml",
  "--cov=differt2d",
  "--ignore=benchmark.py",
  "--ignore=docs/source/examples_gallery",
  "--ignore=examples",
  "--ignore=papers",
  "--doctest-modules",
  "--doctest-ignore-import-errors",
  "--doctest-glob=*.md",
  "--doctest-glob=*.rst",
]
doctest_optionflags = ["NORMALIZE_WHITESPACE"]
env = [
  "JAX_DEBUG_NANS=True",
  "JAX_PLATFORM_NAME=cpu",
  "MPLBACKEND=Agg",
]
filterwarnings = [
  "error",
]

[tool.ruff]
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-ignore = [
  "D203",  # no-blank-line-before-class
  "D212",  # multi-line-summary-second-line
  "D401",  # first-line-imperative-mood
  "D407",  # Missing dashed underline after section
  "F722",  # Syntax error in forward annotation
  "N802",  # lowercase function name
]
extend-select = ["B", "C90", "D", "I", "RUF", "UP", "T"]
isort = {known-first-party = ["differt2d", "tests", "utils"]}

[tool.ruff.lint.per-file-ignores]
"**.ipynb" = ["F821", "T201"]
"**/{docs,examples,papers,tests}/*" = ["D"]
"benchmark.py" = ["D"]

[tool.rye]
dev-dependencies = [
  # dev
  "bump-my-version>=0.20.3",
  "pre-commit>=3.5.0",
  # docs
  "furo>=2023.5.20",
  "myst-nb>=0.17.2",
  "pyside6>=6.5.2,<6.7",
  "qtgallery>=0.0.2",
  "qtpy<=2.4.0",
  "sphinx>=7.2.6",
  "sphinxcontrib-bibtex>=2.6.0",
  "sphinxcontrib-mermaid>=0.9.2",
  "sphinxext-opengraph>=0.7.5",
  "sphinx-autodoc-typehints>=1.23.2",
  "sphinx-copybutton>=0.5.1",
  "sphinx-gallery>=0.16.0",
  # examples
  "ipywidgets>=8.1.2",
  "notebook>=7.1.3",
  "tqdm>=4.66.4",
  # tests
  "chex>=0.1.84",
  "pyperf>=2.6.1",
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-env>=0.8.2",
  "pytest-xdist>=3.3.1",
  "tomli>=1.1.0;python_version<'3.11'",
]
managed = true
